--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,77 +1,100 @@
 # # Use the latest 2.1 version of CircleCI pipeline process engine.
 # # See: https://circleci.com/docs/configuration-reference
-# version: 2.1
+version: 2.1
 
-# orbs:
-#   heroku: circleci/heroku@x.y
+orbs:
+  heroku: circleci/heroku@0.0.10
+  ruby: circleci/ruby@2.1.2
+
+jobs:
+  build:
+    working_directory: ~/favorited-recipes-service
+    docker:
+      - image: cimg/base:stable
+        environment:
+          PGHOST: localhost
+          PGUSER: favorited-recipes-service
+          RAILS_ENV: test
+      - image: cimg/postgres:14.10
+        environment:
+          POSTGRES_USER: favorited-recipes-service
+          POSTGRES_DB: favorite_recipes_service_test
+          POSTGRES_PASSWORD: ""
+      steps:
+        - checkout
+        - run:
+          name: Create Database
+          command: bundle exec rake db:create
+        - run:
+          name: Load Database Schema
+          command: bundle exec rake db:schema:load
+        - run:
+          name: Run RSpec Tests
+          commad: command: |
+           TESTFILES=$(circleci tests glob “spec/**/*_spec.rb” |    circleci tests split)
+         bundle exec rspec — ${TESTFILES}
 
 # # Orchestrate jobs using workflows
 # # See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
-# workflows:
-#   say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
-#     # Inside the workflow, you define the jobs you want to run.
-#     jobs:
-#       - say-hello
-
-#   heroku_deploy:
-#       jobs:
-#         - heroku/deploy-via-git:
-#           post-steps:
-#               - run: rails db:migrate #example of a post-deployment step
-#             pre-steps:
-#               - run: command-that-run-before-deploying #example of a pre-
-
-version: '2.1'
-orbs:
-  ruby: circleci/ruby@2.1.2
-jobs:
-  build:
-    docker:
-      - image: cimg/ruby:2.1.2-node
-    steps:
-      - checkout
-      - ruby/install-deps
-  checking:
-    docker:
-      - image: cimg/ruby:2.1.2-node
-    steps:
-      - checkout
-      - ruby/install-deps
-      - ruby/rubocop-check:
-          format: progress
-          label: Inspecting with Rubocop
-  test:
-    docker:
-      - image: cimg/ruby:2.1.2-node
-      - environment:
-          POSTGRES_DB: favorite_recipes_service_test
-          POSTGRES_PASSWORD: ''
-          POSTGRES_USER: favorite_recipes_service
-        image: circleci/postgres:9.5-alpine
-    environment:
-      BUNDLE_JOBS: '3'
-      BUNDLE_RETRY: '3'
-      PGHOST: 127.0.0.1
-      PGPASSWORD: ''
-      PGUSER: favorite_recipes_service
-      RAILS_ENV: test
-    parallelism: 3
-    steps:
-      - checkout
-      - ruby/install-deps
-      - run:
-          command: dockerize -wait tcp://localhost:5432 -timeout 1m
-          name: Wait for DB
-      - run:
-          command: bundle exec rails db:schema:load --trace
-          name: Database setup
-      - ruby/rspec-test:
-          include: spec/**/*_spec.rb
 workflows:
-  build_and_test:
-    jobs:
-      - build
-      - checking
-      - test:
-          requires:
-            - build
+  heroku_deploy:
+      jobs:
+        - build
+        - heroku/deploy-via-git:
+          post-steps:
+              - run: rails db:migrate
+
+# version: '2.1'
+# orbs:
+#   ruby: circleci/ruby@2.1.2
+# jobs:
+#   build:
+#     docker:
+#       - image: cimg/ruby:2.1.2-node
+#     steps:
+#       - checkout
+#       - ruby/install-deps
+#   checking:
+#     docker:
+#       - image: cimg/ruby:2.1.2-node
+#     steps:
+#       - checkout
+#       - ruby/install-deps
+#       - ruby/rubocop-check:
+#           format: progress
+#           label: Inspecting with Rubocop
+#   test:
+#     docker:
+#       - image: cimg/ruby:2.1.2-node
+#       - environment:
+#           POSTGRES_DB: favorite_recipes_service_test
+#           POSTGRES_PASSWORD: ''
+#           POSTGRES_USER: favorite_recipes_service
+#         image: circleci/postgres:9.5-alpine
+#     environment:
+#       BUNDLE_JOBS: '3'
+#       BUNDLE_RETRY: '3'
+#       PGHOST: 127.0.0.1
+#       PGPASSWORD: ''
+#       PGUSER: favorite_recipes_service
+#       RAILS_ENV: test
+#     parallelism: 3
+#     steps:
+#       - checkout
+#       - ruby/install-deps
+#       - run:
+#           command: dockerize -wait tcp://localhost:5432 -timeout 1m
+#           name: Wait for DB
+#       - run:
+#           command: bundle exec rails db:schema:load --trace
+#           name: Database setup
+#       - ruby/rspec-test:
+#           include: spec/**/*_spec.rb
+# workflows:
+#   build_and_test:
+#     jobs:
+#       - build
+#       - checking
+#       - test:
+#           requires:
+#             - build
