--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,20 +22,20 @@ jobs:
           POSTGRES_PASSWORD: ""
     steps:
       - checkout
+      # Database setup
       - run:
         name: Create Database
         command: bundle exec rake db:create
       - run:
         name: Load Database Schema
         command: bundle exec rake db:schema:load
+      # run tests!
       - run:
         name: Run RSpec Tests
         command: |
-          TESTFILES=$(circleci tests glob “spec/**/*_spec.rb” |    circleci tests split)
+        TESTFILES=$(circleci tests glob “spec/**/*_spec.rb” | circleci tests split)
         bundle exec rspec — ${TESTFILES}
 
-# # Orchestrate jobs using workflows
-# # See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
   heroku_deploy:
       jobs:
