--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,33 @@
 # # Use the latest 2.1 version of CircleCI pipeline process engine.
 # # See: https://circleci.com/docs/configuration-reference
 version: 2.1
+
 orbs:
   heroku: circleci/heroku@0.0.10
   ruby: circleci/ruby@2.1.2
+
 jobs:
   build:
     docker:
       - image: cimg/ruby:3.2.2
-  steps:
-    - run:
-        command: bundle exec rspec
+    steps:
+      - checkout
+      - ruby/install-deps  # Uses the ruby orb to install dependencies
+      - run:
+          name: Run Tests
+          command: bundle exec rspec
 
 workflows:
+  version: 2
   run_tests:
     jobs:
       - build
+
   heroku_deploy:
     jobs:
-      - heroku/deploy-via-git
+      - heroku/deploy-via-git:
+          requires:
+            - build
+          filters:
+            branches:
+              only: main
