--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ workflows:
     jobs:
       - heroku/deploy-via-git:
           requires:
-            - build
+            - run_tests
           filters:
             branches:
               only: main
