--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,15 +19,12 @@ jobs:
 
 workflows:
   version: 2
-  run_tests:
+  run_tests_and_deploy:
     jobs:
       - build
-
-  heroku_deploy:
-    jobs:
       - heroku/deploy-via-git:
           requires:
-            - run_tests
+            - build
           filters:
             branches:
               only: main
