add environment info for build postgresdb

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,10 @@ jobs:
   build:
     docker:
       - image: cimg/ruby:3.2.2
+      - environment:
+          POSTGRES_DB: favorited_recipes_service_test
+          POSTGRES_USER: postgres
+        image: circleci/postgres:14.10
     steps:
       - checkout
       - ruby/install-deps  # Uses the ruby orb to install dependencies
