--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - environment:
           POSTGRES_DB: favorited_recipes_service_test
           POSTGRES_USER: postgres
-        image: cimg/postgres:16.3.0
+        image: circleci/postgres:9.5-alpine
     steps:
       - checkout
       - ruby/install-deps  # Uses the ruby orb to install dependencies
